# abracadabra_gesture_processing

./: .cursorrules  .dockerignore  .gitignore  Dockerfile  GITHUB_SETUP.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.env.example  railway.json  railway.toml  render.yaml  requirements.txt  start.sh
.cursor/rules/: python-function-reflection-assistant.mdc
app/: main.py
app/api/: router.py
app/data/: gesture_model.joblib  rf_gesture_model.joblib
app/data/pending_training/: tap_0.538_20250525_143144_a5e6c446.json  tap_0.538_20250525_143206_974bd543.csv  tap_0.538_20250525_143206_974bd543.json  tap_0.553_20250525_142905_039626ab.json  tap_0.553_20250525_142919_ab98d094.csv  tap_0.553_20250525_142919_ab98d094.json  tap_0.607_20250525_141509_09b89a63.json  tap_0.607_20250525_141523_4146c323.csv  tap_0.607_20250525_141523_4146c323.json  tap_0.631_20250525_141642_ecf3e366.json  tap_0.631_20250525_141709_f834c633.csv  tap_0.631_20250525_141709_f834c633.json  tap_0.672_20250525_143040_a9df015e.csv  tap_0.672_20250525_143040_a9df015e.json  tap_0.672_20250525_143052_7424d52f.json
app/data/training/: still_001.csv  still_005.csv  still_006.csv  still_007.csv  still_008.csv  still_009.csv  still_010.csv  still_011.csv  still_012.csv  still_013.csv  still_014.csv  still_015.csv  still_016.csv  still_017.csv  still_018.csv  still_019.csv  still_020.csv  still_021.csv  still_022.csv  still_023.csv  still_024.csv  still_025.csv  still_026.csv  still_027.csv  still_028.csv  still_029.csv  still_030.csv  still_031.csv  still_032.csv  still_033.csv  still_034.csv  still_035.csv  still_036.csv  still_037.csv  still_038.csv  still_039.csv  still_040.csv  still_041.csv  still_042.csv  still_043.csv  (+178 more)
app/models/: gesture_model.py  rf_gesture_model.py
app/utils/: abracadabra_gesture_processing.code-workspace  data_handler.py
csv/: upup.csv  upup2.csv  upup3.csv  upuppredict.csv
